--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/inventario
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8082
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
